syntax = "proto3";

package cards;

service UserCardDetails {
  rpc CreateUser (CreateUserRequest) returns (CardDetails);
}

/* -------- Requests -------- */

message CreateUserRequest {
  string table_id = 1;
}

/* -------- Models -------- */

message CardDetails {
  string game_id = 1;

  repeated string flop_round = 2;   // 3 cards
  string turn_round_card = 3;       // 1 card
  string river_round_card = 4;      // 1 card

  Shuffling total_shuffled_deck = 5;
}

message Shuffling {
  string shuffle_name = 1;
  repeated string cards = 2;        // 52 cards (validated in code)
}
